--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ footer a {
 }
 
 .banner {
-  background: url('img/1.jpg') no-repeat center center/cover;
+  background: url('../img/1.jpg') no-repeat center center/cover;
   height: 180px;
   display: flex;
   align-items: center;
